Updated orders.html to print supplements ordered for that pet by the customer.

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -24,7 +24,7 @@
         <button class="button" onclick="window.location.href='/grooming-form'">Grooming</button>
         <button class="button" onclick="window.location.href='/supplements-form'">Supplements</button>
         <button class="button" onclick="window.location.href='/bookAppointment'">Book Doctor Appointment</button>
-        <button class="button" onclick="window.location.href='/orders'">Orders</button>
+        <button class="button" onclick="window.location.href='/orders-form'">Orders</button>
     </div>
 
     <h2>Your Pets</h2>
