--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -21,7 +21,7 @@
         <a href="/dashboardView" class="button">Back to Dashboard</a>
     </div>
 
-    <table class="pet-table">
+    <table class="orders-table">
         <thead>
         <tr>
             <th>Pet Name</th>
