--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,13 +9,17 @@
 <body>
 <div class="container">
     <h1>Login</h1>
-    <form action="/validate-login" method="post">
+    <form th:action="@{/login}" th:object="${login}" method="post">
         <div class="form-group">
-            <input type="email" name="email" placeholder="Email" required />
+            <label for="email">Email</label>
+            <input type="email" id="email" th:field="*{email}" required />
         </div>
+
         <div class="form-group">
-            <input type="password" name="password" placeholder="Password" required />
+            <label for="password">Password</label>
+            <input type="password" id="password" th:field="*{password}" required />
         </div>
+
         <div class="button-group">
             <button type="submit" class="button">Login</button>
         </div>
