--- a/src/main/resources/templates/supplementsForm.html
+++ b/src/main/resources/templates/supplementsForm.html
@@ -15,11 +15,11 @@
     <form th:action="@{/book-supplements}" method="post" th:object="${supplements}">
         <!-- Pet Selection -->
         <div class="form-group">
-            <label for="petName">Pet Name</label>
-            <select id="petName" th:field="*{petName}" required>
+            <label for="petId">Pet Name</label>
+            <select id="petId" th:field="*{petId}" required>
                 <option value="">Select a Pet</option>
                 <option th:each="pet : ${pets}"
-                        th:value="${pet.name}"
+                        th:value="${pet.id}"
                         th:text="${pet.name}">
                 </option>
             </select>
