--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -13,6 +13,10 @@
     <div class="user-info">
         Hello, <span th:text="${ownerName}">User</span>
     </div>
+
+    <form th:action="@{/logout}" method="post">
+        <button class="logout-button" type="submit">Logout</button>
+    </form>
 </div>
 
 
